gcc/testsuite/gcc.dg/init-bad-5.c
/* PR c/28136 */
/* { dg-do compile } */
/* { dg-options "" } */

int i = (struct A[]) {};  /* { dg-error "incomplete|empty|initialization" } */
